# pico-cpp-dev

./: .gitignore  README.md  env.sh  start.sh
.devcontainer/: Dockerfile
projects/first/: CMakeLists.txt  first.c
projects/hello/: CMakeLists.txt  hello.cpp  variables.h.in
projects/pioai/: CMakeLists.txt  main.c  pio_pwm.pio
projects/pioai2/: main.cpp  pio_blink.pio
projects/pioblink/: CMakeLists.txt  main.cpp  pio_blink.pio
projects/piosine/: CMakeLists.txt  main.cpp  pio_sine.pio
projects/piosound/: CMakeLists.txt  README-AI.md  main.cpp  pio_sound.cpp  pio_sound.h  pio_sound.pio  pio_sound_base.h
projects/toyorgan/: CMakeLists.txt  main.cpp  toyorgan.cpp  toyorgan.h  toyorgan.md  toyorgan.pio  toyorgan_base.h
setup/: sdk-setup.sh
